# dev-kit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-cn.md  ROADMAP.md  VERSION-0.2.0.md  VERSION-0.2.1.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml  rust.yml  update-homebrew-tap.yml
dk/: Cargo.toml  build.rs
dk/src/: lib.rs  main.rs
dk/src/command/: base64.rs  formatter.rs  mod.rs  text.rs  textdiff.rs  uri.rs
dk/src/command/http_parser/: jetbrains_http.rs  mod.rs
dk/src/command/json/: difftool.rs  json.rs  mod.rs  type_.rs
dk/src/command/json/http_parser/: jetbrains_http.rs  mod.rs
dk/src/command/json/json/: jsonpath_match.rs
dk/src/command/qrcode/: generator.rs  mod.rs
dk/src/command/time/: mod.rs  timestring_guess.rs
dk/src/command/uri/: components.rs  mod.rs  uri.rs
dkui/: .gitignore  README.md  index.html  package-lock.json  package.json
dkui/src/: App.vue
dkui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
dkui/src-tauri/icons/: icon.icns
dkui/src-tauri/src/: app_state.rs  command_line.rs  lib.rs  main.rs
dkui/src-tauri/src/components/: base64.rs  json.rs  mod.rs  qrcode.rs  time.rs  uri.rs
dkui/src-tauri/src/components/json/: jsondiff.rs  jsonparser.rs  mod.rs
dkui/src/components/: Base64Parser.vue  DivCalculator.vue  JsonDiff.vue  JsonParser.vue  QrCodeGenerator.vue  TimeParser.vue  TimeTools.vue  UriDecoder.vue  UriParser.vue  UriTools.vue
dkui/src/composables/: useDebounce.js  useTheme.js
docs/: RELEASE.md  index.html
packaging/homebrew/: devkit.rb.template
scripts/: check-version.sh  prepare-tauri-binary.sh  render-homebrew-formula.sh
src/: main.rs
src/command/: json.rs  uri.rs
src/command/json/: difftool.rs  json.rs  mod.rs
src/command/time/: mod.rs  string_time_parser.rs
src/kit/: json_kit.rs  mod.rs  time_kit.rs  uri_component.rs  uri_kit.rs
src/kit/time_kit/: mod.rs  string_time_parser.rs
tests/: Cargo.toml
tests/src/: main.rs
tests/tests/: core_workflows.rs
xtask/: Cargo.toml
xtask/src/: main.rs
