[package]
name = "dev-kit"
version = "0.1.0"
edition = "2024"

[build-dependencies]
anyhow = "1.0"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14"
derive_more = { version = "2.1", features = ["display", "from", "from_str", "deref"] }
strum = { version = "0.27", features = ["derive"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
percent-encoding = "2.3"
jsonpath-rust = "1.0"
chrono = "0.4"
which = "8.0.0"
[features]

