[package]
name = "dev-kit"
version = "0.1.1"
edition = "2024"
description = "A collection of utilities and tools for development, including URI, JSON, and Time tools."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wenhaozhao/dev-kit"
homepage = "https://github.com/wenhaozhao/dev-kit"
readme = "README.md"
keywords = ["cli", "utilities", "json", "time", "uri"]
categories = ["command-line-utilities"]

[build-dependencies]
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.24"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = {version = "1.12"}
lazy_static = {version = "1.5"}
itertools = "0.14"
derive_more = { version = "2.1", features = ["display", "from", "from_str", "deref"] }
strum = { version = "0.27", features = ["derive"] }
futures = { version = "0.3" }
tokio = { version = "1.48", features = ["rt-multi-thread"] }
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = { version = "1.0" }
percent-encoding = "2.3"
jsonpath-rust = "1.0"
chrono = "0.4"
which = "8.0.0"

[features]

