[package]
name = "dev-kit"
description = "DevKit Command-Line App"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "devkit"

[build-dependencies]
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
itertools = { workspace = true }
derive_more = { workspace = true, features = ["display", "from", "from_str", "deref"] }
strum = { workspace = true, features = ["derive"] }
regex = { version = "1.12" }
futures = { version = "0.3" }
tokio = { version = "1.48", features = ["rt-multi-thread"] }
url = "2.5"
serde_urlencoded = { version = "0.7" }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde_json = { version = "1.0" }
percent-encoding = "2.3"
jsonpath-rust = "1.0"
dateparser = { version = "0.2" }
which = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
qrcode = { version = "0.14", features = ["image", "svg"] }
image = "0.25"
uuid = { version = "1.19", features = ["v4"] }

[features]
read_stdin = []
default = ["read_stdin"]
