[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
os-xtask-utils = "0.0.0"
itertools = { workspace = true }
derive_more = {workspace = true, features = ["display"]}
strum = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
fs_extra = "1.3.0"