[package]
name = "dkui"
version = "0.1.4"
description = "DevKit UI App"
authors = ["zhaowenhao@mhlife.vip"]
edition = "2021"

[lib]
name = "dkui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
chrono = { workspace = true }
strum = { workspace = true, features = ["derive"] }
dev-kit = { path = "../../dk" }

