[package]
name = "DevKitDesktop"
description = "DevKit Desktop App"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lib]
name = "dkui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.6"
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true, features = ["derive"] }
dev-kit = { path = "../../dk", default-features = false }
which = { workspace = true }
lazy_static = { workspace = true }
